# pseudo-language

./: README.md  meson.build
src/: Application.vala  PortableObject.vala  String.test.vala  String.vala  meson.build
